--- a/main.tex
+++ b/main.tex
@@ -1,15 +1,15 @@
-\documentclass[10pt]{report}
+\documentclass[10pt,twoside]{report}
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{natbib}
 \usepackage{lipsum}
-\usepackage[margin=2cm]{geometry}
+\usepackage[top=2cm,bottom=2cm,left=2cm,right=1.5cm]{geometry}
 
 \title{Neutrinos}
 \author{\
     Liam O'Sullivan \and
-    Liga Baikova \and
     Stephan O'Brien \and
+    Liga Baikova \and
     Fionnan Davitt
 }
 
