--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
     Liam O'Sullivan \and
     Stephan O'Brien \and
     Liga Baikova \and
-    Fionnan Davitt
+    Fionan Davitt
 }
 
 \begin{document}
